--- a/app/views/blogs/blog_detail.jade
+++ b/app/views/blogs/blog_detail.jade
@@ -10,7 +10,7 @@ for blog in blogs
             a(class="article-delete", href="/blog/delete/#{blog.id}", title="delete")
               span.octicon.octicon-trashcan
         if (session.login)
-          label.article-times 阅读#{blog.times}次
+          label.article-times 阅读#{blog.reTimes}/#{blog.times}次
       .content.article-entry
         != blog.content
       footer.article-footer
