--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -29,6 +29,7 @@ html
       a(href="/plugin") 插件
       a(href="/about") 关于blog
     #main
+      input(type="hidden",id="isLogin",value="#{session.login}")
       block content
       script(src='/javascripts/jquery-1.10.2.min.js')
       script(src='/javascripts/plugins.min.js')
